--- a/project.ipynb
+++ b/project.ipynb
@@ -2,6 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "emoji_emoji_dict = {}\n",
+    "    emoji_dict['&lt;3'] = 'Heart'\n",
+    "    emoji_dict[':-)'] = 'Positive'\n",
+    "    emoji_dict['=)'] = 'Positive'\n",
+    "    emoji_dict[':)'] = 'Positive'\n",
+    "    emoji_dict[': )'] = 'Positive'\n",
+    "    emoji_dict[':o)'] = 'Positive'\n",
+    "    emoji_dict[':]'] = 'Positive'\n",
+    "    emoji_dict[':3'] = 'Positive'\n",
+    "    emoji_dict[':c)'] = 'Positive'\n",
+    "    \n",
+    "    emoji_dict[':D'] = 'Extremely Positive'\n",
+    "    emoji_dict[':-D'] = 'Extremely Positive'\n",
+    "    emoji_dict['C:'] = 'Extremely Positive' \n",
+    "    emoji_dict['=D'] = 'Extremely Positive' \n",
+    "    emoji_dict['XD'] = 'Extremely Positive' \n",
+    "    emoji_dict['LOL'] = 'Extremely Positive' \n",
+    "    \n",
+    "    emoji_dict[':-('] = 'Negative'\n",
+    "    emoji_dict[':/'] = 'Negative'\n",
+    "    emoji_dict[':('] = 'Negative'\n",
+    "    emoji_dict[': ('] = 'Negative'\n",
+    "    emoji_dict[':c'] = 'Negative'\n",
+    "    emoji_dict[':['] = 'Negative'\n",
+    "    emoji_dict['T_T'] = 'Negative'\n",
+    "    emoji_dict[':S'] = 'Negative'\n",
+    "    emoji_dict[\":'S\"] = 'Negative'\n",
+    "\n",
+    "    emoji_dict['D8'] = 'Extremely Negative'\n",
+    "    emoji_dict['D;'] = 'Extremely Negative'\n",
+    "    emoji_dict['D='] = 'Extremely Negative'\n",
+    "    emoji_dict['DX'] = 'Extremely Negative'     \n",
+    "    emoji_dict['v.v'] = 'Extremely Negative'\n",
+    "    \n",
+    "    emoji_dict[': |'] = 'Neutral'\n",
+    "    emoji_dict[':-|'] = 'Neutral'\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": true
@@ -29,41 +76,7 @@
     "    return re.sub(r'\\B@\\w+\\S+', \"|T|\", sentence)\n",
     "\n",
     "def replaceEmotion(sentence):    \n",
-    "    dict = {}\n",
-    "    dict['&lt;3'] = 'Heart'\n",
-    "    dict[':-)'] = 'Positive'\n",
-    "    dict['=)'] = 'Positive'\n",
-    "    dict[':)'] = 'Positive'\n",
-    "    dict[': )'] = 'Positive'\n",
-    "    dict[':o)'] = 'Positive'\n",
-    "    dict[':]'] = 'Positive'\n",
-    "    dict[':3'] = 'Positive'\n",
-    "    dict[':c)'] = 'Positive'\n",
     "    \n",
-    "    dict[':D'] = 'Extremely Positive'\n",
-    "    dict[':-D'] = 'Extremely Positive'\n",
-    "    dict['C:'] = 'Extremely Positive' \n",
-    "    dict['=D'] = 'Extremely Positive' \n",
-    "    dict['XD'] = 'Extremely Positive' \n",
-    "    dict['LOL'] = 'Extremely Positive' \n",
-    "    \n",
-    "    dict[':-('] = 'Negative'\n",
-    "    dict[':/'] = 'Negative'\n",
-    "    dict[':('] = 'Negative'\n",
-    "    dict[': ('] = 'Negative'\n",
-    "    dict[':c'] = 'Negative'\n",
-    "    dict[':['] = 'Negative'\n",
-    "    dict['T_T'] = 'Negative'\n",
-    "    dict[':S'] = 'Negative'\n",
-    "    dict[\":'S\"] = 'Negative'\n",
-    "\n",
-    "    dict['D8'] = 'Extremely Negative'\n",
-    "    dict['D;'] = 'Extremely Negative'\n",
-    "    dict['D='] = 'Extremely Negative'\n",
-    "    dict['DX'] = 'Extremely Negative'     \n",
-    "    dict['v.v'] = 'Extremely Negative'\n",
-    "    \n",
-    "    dict[': |'] = 'Neutral'\n",
     "    \n",
     "    words = sentence.split()\n",
     "    for word in words:\n",
@@ -5299,7 +5312,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -5313,7 +5326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
