Update stopword read in txt

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -113,62 +113,32 @@
    "source": [
     "# Construct an set of stopwords\n",
     "stopwords = []\n",
-    "with open(\"stop-word-list.csv\",'rb') as f:\n",
-    "    fcsv = csv.reader(f, skipinitialspace=True, delimiter=',')\n",
-    "    for row in fcsv:\n",
-    "        stopwords.append(row)"
+    "with open(\"stop-word-list.txt\",'r') as f:\n",
+    "    for word in f:\n",
+    "        stopwords.append(word)\n",
+    "stopwords = set()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test replaceRepeatedChar function:\n",
-      "I likeeeee move ittt movee it\n",
-      "i likee move itt movee it \n",
-      "\n",
-      "Filter those meaningless words:\n",
-      "['likee', 'itt', 'movee', 'juust', 'fuuck', 'pleaasee', 'biigg', 'aahh']\n",
-      "['like', 'it', 'move', 'just', 'fuck', 'pleas', 'big', 'ah'] \n",
-      "\n",
-      "Test replaceURL function:\n",
-      "aaahhh... The taste of Italy http://www.caffevita.com/shop/images/BialettiOldSchool.jpg\n",
-      "aaahhh... The taste of Italy |U| \n",
-      "\n",
-      "Test findTagName function(not important):\n",
-      "  -@otto where are you @@@chelin you are so smart! &it @chienhan let's paly pokemongo\n",
-      "['@otto', '@chelin', '@chienhan'] \n",
-      "\n",
-      "Test replaceNameTag function:\n",
-      "  -|T| where are you @@|T| you are so smart! &it |T| let's paly pokemongo \n",
-      "\n",
-      "Test replaceEmotion function:\n",
-      "I got 100 Pikachus with hats and it is so amazing :3\n",
-      ":3\n",
-      "1 \n",
-      "\n",
-      "Test replaceNegations function:\n",
-      "I type in fumble snags coward horrendous these words\n",
-      "I type in Not Not Not Not these words \n",
-      "\n",
-      "Test replacePositive function:\n",
-      "I can spell accurately beauty glitz!\n",
-      "I can spell Good Good Good! \n",
-      "\n",
-      "Test removeStopwords function:\n",
-      "no no no I my me we our us Hello Pika!!!\n",
-      "- - - - - - - - - hello pika!!!\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n### Test function ###\\ns1 = \"I likeeeee move ittt movee it\"\\nprint \\'Test replaceRepeatedChar function:\\'\\nprint s1\\nprint replaceRepeatedChar(s1), \\'\\n\\'\\n\\n# second time filter (not sure how to do here, maybe retrieve some degree of frequency and replace them)\\nprint \\'Filter those meaningless words:\\'\\n## assume after added into dict, some example may fail such as pleaasee -> pleas\\nmeaningless_test = [\\'likee\\', \\'itt\\', \\'movee\\', \\'juust\\', \\'fuuck\\', \\'pleaasee\\', \\'biigg\\', \\'aahh\\']\\nprint meaningless_test\\nprint map(lambda x: \"\".join(OrderedDict.fromkeys(x)), meaningless_test), \\'\\n\\'\\n\\n# Replace URL\\ns2 = \\'aaahhh... The taste of Italy http://www.caffevita.com/shop/images/BialettiOldSchool.jpg\\'\\nprint \\'Test replaceURL function:\\'\\nprint s2\\nprint replaceURL(s2), \\'\\n\\'\\n\\n# Replace tag Name\\ntagName = \"  -@otto where are you @@@chelin you are so smart! &it @chienhan let\\'s paly pokemongo\"\\nprint \\'Test findTagName function(not important):\\'\\nprint tagName\\nprint findTagName(tagName), \\'\\n\\'\\nprint \\'Test replaceNameTag function:\\'\\nprint replaceNameTag(tagName), \\'\\n\\'\\n\\n# Replace emotion\\nemojiText = \\'I got 100 Pikachus with hats and it is so amazing :3\\'\\nprint \\'Test replaceEmotion function:\\'\\nprint emojiText\\nprint replaceEmotion(emojiText), \\'\\n\\'\\n\\n# Replace negative words\\nnegativeText = \\'I type in fumble snags coward horrendous these words\\'\\nprint \\'Test replaceNegations function:\\'\\nprint negativeText\\nprint replaceNegations(negativeText),\\'\\n\\'\\n\\n# Replace positive words\\npositiveText = \\'I can spell accurately beauty glitz!\\'\\nprint \\'Test replacePositive function:\\'\\nprint positiveText\\nprint replacePositive(positiveText),\\'\\n\\'\\n\\n# Remove stopwords\\nstopword_test = \\'no no no I my me we our us Hello Pika!!!\\'\\nprint \\'Test removeStopwords function:\\'\\nprint stopword_test\\nprint removeStopwords(stopword_test)\\n### End of Testing ###\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
     "### Test function ###\n",
     "s1 = \"I likeeeee move ittt movee it\"\n",
     "print 'Test replaceRepeatedChar function:'\n",
@@ -219,7 +189,8 @@
     "print 'Test removeStopwords function:'\n",
     "print stopword_test\n",
     "print removeStopwords(stopword_test)\n",
-    "### End of Testing ###"
+    "### End of Testing ###\n",
+    "'''"
    ]
   },
   {
