fix pos neg emoji dict

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -12,24 +12,24 @@
     "emoji_dict = dict()\n",
     "with open(\"pos_emoji.txt\", \"r\") as f:\n",
     "    for line in f:\n",
-    "        emoji_dict[line] = 'Positive'\n",
+    "        emoji_dict[line.strip()] = 'Positive'\n",
     "\n",
     "with open(\"extrpos_emoji.txt\", \"r\") as f:\n",
     "    for line in f:\n",
-    "        emoji_dict[line] = 'Positive Positive'\n",
+    "        emoji_dict[line.strip()] = 'Positive Positive'\n",
     "\n",
     "with open(\"neg_emoji.txt\", \"r\") as f:\n",
     "    for line in f:\n",
-    "        emoji_dict[line] = 'Negative'\n",
+    "        emoji_dict[line.strip()] = 'Negative'\n",
     "        \n",
     "with open(\"extrneg_emoji.txt\", \"r\") as f:\n",
     "    for line in f:\n",
-    "        emoji_dict[line] = 'Negative Negative'"
+    "        emoji_dict[line.strip()] = 'Negative Negative'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -43,9 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -73,9 +73,11 @@
     "    words = sentence.split()\n",
     "    result = []\n",
     "    for word in words:\n",
-    "        for key in emoji_dict.iterkeys():\n",
-    "            if key in word:\n",
-    "                result.append(emoji_dict.get(key))\n",
+    "        if word in words:\n",
+    "        #    result.append(emoji_dict[word])\n",
+    "            for key in emoji_dict.iterkeys():\n",
+    "                if key in word:\n",
+    "                    result.append(emoji_dict.get(key))\n",
     "    return result\n",
     "\n",
     "def replaceNegations(sentence):\n",
@@ -101,6 +103,46 @@
     "        regex = re.compile(r'\\b('+word+r')\\b')\n",
     "        sentence = regex.sub(\"-\", sentence.lower())  \n",
     "    return sentence.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def feature(sentence):\n",
+    "    feat = [1]\n",
+    "    feat.append()\n",
+    "    \n",
+    "    return feat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Negative', 'Negative', 'Negative Negative']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss=\"iejo qwijej dqjdi :( dide :-| dhewuhe :\\ gtd :'( s\"\n",
+    "\n",
+    "sss= replaceEmotion(ss)\n",
+    "sss"
    ]
   },
   {
@@ -1727,7 +1769,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -1741,7 +1783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
