pos neg emoji&word counts feat

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -73,12 +73,20 @@
     "    words = sentence.split()\n",
     "    result = []\n",
     "    for word in words:\n",
-    "        if word in words:\n",
-    "        #    result.append(emoji_dict[word])\n",
-    "            for key in emoji_dict.iterkeys():\n",
-    "                if key in word:\n",
-    "                    result.append(emoji_dict.get(key))\n",
-    "    return result\n",
+    "        for key in emoji_dict.iterkeys():\n",
+    "            if key in word:\n",
+    "                result.append(emoji_dict.get(key))\n",
+    "    pos_count, neg_count = 0, 0\n",
+    "    for x in result:\n",
+    "        if x == 'Positive':\n",
+    "            pos_count +=1\n",
+    "        elif x == 'Positive Positive':\n",
+    "            pos_count +=3\n",
+    "        elif x == 'Negative':\n",
+    "            neg_count +=1\n",
+    "        else:\n",
+    "            neg_count +=3\n",
+    "    return pos_count,neg_count\n",
     "\n",
     "def replaceNegations(sentence):\n",
     "    words = sentence.split()\n",
@@ -98,6 +106,16 @@
     "            count += 1\n",
     "    return count\n",
     "\n",
+    "def countPosNeg(sentence):\n",
+    "    words = sentence.split()\n",
+    "    pos_count, neg_count = 0, 0\n",
+    "    for w in words:\n",
+    "        if w in posWords:\n",
+    "            pos_count+=1\n",
+    "        if w in negWords:\n",
+    "            neg_count+=1\n",
+    "    return pos_count,neg_count\n",
+    "\n",
     "def removeStopwords(sentence):\n",
     "    for word in stopwords[0]:\n",
     "        regex = re.compile(r'\\b('+word+r')\\b')\n",
@@ -114,15 +132,19 @@
    "outputs": [],
    "source": [
     "def feature(sentence):\n",
-    "    feat = [1]\n",
-    "    feat.append()\n",
-    "    \n",
+    "    emoji_pos, emoji_neg = replaceEmotion(sentence)\n",
+    "    word_pos, word_neg = countPosNeg(sentence)\n",
+    "    feat = [1]               # bias term\n",
+    "    feat.append(emoji_pos)   # scores of positive emoji\n",
+    "    feat.append(emoji_neg)   # scores of negative emoji\n",
+    "    feat.append(word_pos)    # positive word counts\n",
+    "    feat.append(word_neg)    # negative word counts\n",
     "    return feat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -130,19 +152,19 @@
     {
      "data": {
       "text/plain": [
-       "['Negative', 'Negative', 'Negative Negative']"
+       "(6, 5)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ss=\"iejo qwijej dqjdi :( dide :-| dhewuhe :\\ gtd :'( s\"\n",
+    "ss=\"iejo qwi XD jej dqjdi :( dide :-| dhewuhe :\\ gtd :'( s LOL\"\n",
     "\n",
-    "sss= replaceEmotion(ss)\n",
-    "sss"
+    "sss_p, sss_n= replaceEmotion(ss)\n",
+    "sss_p, sss_n"
    ]
   },
   {
